made login/reg inputs screen readable, fixed navbar prob

--- a/quota/public/css/app.css
+++ b/quota/public/css/app.css
@@ -1087,10 +1087,14 @@ th {
   box-sizing: border-box;
 }
 html {
+  margin:0px;
+  padding:0px;
   font-size: 10px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
+  margin:0px;
+  padding-top: 70px;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 15px;
   line-height: 1.42857143;
